--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>The Sages Consult</title>
+    <title>The Sages Consult</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+        body,
+        h1 {
+            font-family: "Raleway", sans-serif
+        }
+
+        body,
+        html {
+            height: 100%
+        }
+
+        .bgimg {
+            background-color: black;
+            min-height: 100%;
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
 </head>
+
 <body>
 
-<h1>Coming soon ...</h1>
-  <a href="mailto:info@thesagesconsult.com?subject = Feedback">info@thesagesconsult.com</a>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+        <div class="w3-display-middle">
+            <h1 class="w3-jumbo w3-animate-top">COMING SOON ...</h1>
+            <hr class="w3-border-grey" style="margin:auto;width:40%">
+            <a href="mailto:info@thesagesconsult.com?subject = Feedback">info@thesagesconsult.com</a>
+        </div>
+        <div class="w3-display-bottomleft w3-padding-large">
+
+        </div>
+    </div>
 
 </body>
+
 </html>
