--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">COMING SOON ...</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
-            <a class=" w3-center" href="mailto:info@thesagesconsult.com?subject = Feedback">info@thesagesconsult.com</a>
+            <a class=" w3-center w3-animate-top" href="mailto:info@thesagesconsult.com?subject = Feedback">info@thesagesconsult.com</a>
         </div>
         <div class="w3-display-bottomleft w3-padding-large">
 
